--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit>=1.31.0
-opencv-python-headless>=4.8.0.74
-tensorflow>=2.13.0
-numpy>=1.24.3
-Pillow>=10.0.0
-matplotlib>=3.7.1
-requests>=2.31.0
-h5py>=3.9.0
-seaborn>=0.12.2
-scikit-learn>=1.3.0
+streamlit
+opencv-python-headless
+tensorflow
+numpy
+Pillow
+matplotlib
+requests
+h5py
+seaborn
+scikit-learn
